[package]
name = "chudo-core"
version = "0.7.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
ed25519-dalek = "2.1"
sha3 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
