[package]
name = "chudo-messenger"
version = "0.9.0"
edition = "2021"
authors = ["CHUDO Team"]
description = "P2P Messenger for CHUDO Blockchain with libp2p"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
sled = "0.34"
ed25519-dalek = "2"
rand = "0.8"
x25519-dalek = "2"
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# libp2p - P2P networking (without WebSocket due to compilation issues)
libp2p = { version = "0.54", features = ["tokio", "gossipsub", "mdns", "kad", "request-response", "noise", "yamux", "tcp", "quic"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Storage
sled = "0.34"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bs58 = "0.5"

# gRPC integration
tonic = "0.12"
prost = "0.13"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
hkdf = "0.12.4"
rand_core = "0.10.0"
hex = "0.4.3"
hmac = "0.12.1"

[dev-dependencies]
tokio-test = "0.4"

