[package]
name = "chudo-node"
version = "0.9.2"
edition = "2021"

[dependencies]
chudo-core = { path = "../chudo-core" }
chudo-messenger = { path = "../chudo-messenger" }
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
hex = "0.4"
futures-core = "0.3"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.9"
